bad/bin_op_le_int_void.example_compiler_output
ERROR
[1mbad/bin_op_le_int_void.lat:4:5: [1;31merror: [0;1moperator <= is defined only for int values and string values, not `int` and `void`[m
	42 <= foo();
	   [1;32m^[m
